--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8081
 jdbc.driverClassName=org.postgresql.Driver 
 spring.datasource.url=jdbc:postgresql://localhost:5432/appweb
 spring.datasource.username=postgres
